syntax = "proto3";

package proto;
import "internal/proto/keeper/keeper.proto";

message SyncRequest {
    repeated Secret secrets = 1;
}

message SyncResponse {
    bool success = 1;
    repeated Secret secrets = 2;
}

service Sync {
    rpc Sync(SyncRequest) returns (SyncResponse);
}